nivasa-macros/tests/trybuild/module_duplicate_key.stderr
error: duplicate `providers` entry in `#[module]`
  --> tests/trybuild/module_duplicate_key.rs:11:5
   |
11 |     providers: [Service],
   |     ^^^^^^^^^
